# GPURegPlayground

./: .clangd  .gitignore  CMakeLists.txt  adamoptimiser.cpp  adamoptimiser.h  gpu.cpp  gpu.h  image.cpp  image.h  main.cpp  transform.cpp  transform.h  utils.cpp  utils.h  wgpucontext.cpp  wgpucontext.h
.github/workflows/: build.yml
cmake/: dawn.cmake
data/: brain.pgm  brain_translated.pgm  target.pgm
shaders/: difference.wgsl  downsample.wgsl  gradientx.wgsl  gradienty.wgsl  reduction.wgsl  reduction_f32.wgsl  transformimage.wgsl  updategradients.wgsl  updateparameters.wgsl
shaders/3d/: transformimage_3d.wgsl
testing/: CMakeLists.txt  gputests.cpp  shadertests.cpp
